# mcp-sandbox

./: .docker_build_info  .gitignore  CODE_OF_CONDUCT.md  Dockerfile  LICENSE  README.md  README_zh.md  config.toml  main.py  mcp_sandbox.py  pyproject.toml
.github/: dependabot.yml
.github/workflows/: dependency-update.yml
mcp_sandbox/api/: auth_routes.py  container_file.py  routes.py  sandbox_file.py
mcp_sandbox/auth/: auth.py  utils.py
mcp_sandbox/core/: docker_manager.py  mcp_tools.py  python_service.py
mcp_sandbox/core/sandbox_modules/: execution.py  file_ops.py  manager.py  package.py  records.py
mcp_sandbox/db/: database.py
mcp_sandbox/db/data/: sandboxes.json  users.json
mcp_sandbox/middleware/: auth_middleware.py
mcp_sandbox/models/: user.py
mcp_sandbox/utils/: config.py  file_manager.py  task_manager.py
sandbox_images/: Dockerfile
ui/: .env.example  index.html  package.json  pnpm-lock.yaml
ui/src/: App.tsx
ui/src/components/: Button.tsx  Card.tsx  Navbar.tsx  SandboxCard.tsx
ui/src/pages/: AuthPage.tsx  Dashboard.tsx
ui/src/services/: api.ts
