[project]
name = "mcp-sandbox"
version = "0.1.0"
description = "Safe sandboxes for llms"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "docker>=7.1.0",
    "fastapi>=0.115.12",
    "fastmcp>=2.2.0",
    "ruff>=0.11.6",
    "tomli>=2.2.1",
]

[project.scripts]
mcp-sandbox = "main:main"