[project]
name = "mcp-sandbox"
version = "0.1.0"
description = "Safe sandboxes for llms"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "docker>=7.1.0",
    "fastapi>=0.115.12",
    "fastmcp>=2.2.0",
    "ipdb>=0.13.13",
    "passlib[bcrypt]>=1.7.4",
    "pydantic[email]>=2.11.3",
    "python-jose[cryptography]>=3.4.0",
    "python-multipart>=0.0.20",
    "ruff>=0.11.6",
    "tomli>=2.2.1",
]

[project.scripts]
mcp-sandbox = "main:main"

[tool.uv]
index-url = "http://localhost:3141/root/pypi/+simple/"
extra-index-url = [
    "https://mirrors.aliyun.com/pypi/simple/",
    "https://pypi.mirrors.ustc.edu.cn/simple/",
    "https://pypi.doubanio.com/simple/",
    "https://pypi.org/simple"
]
